# market-data-pipeline-engine

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
benchmarks/: benchmark_naive.py  benchmark_optimized.py  compare.py
benchmarks/results/: README.md
docs/: 01_introduction.md  01_problem_statement.md  02_architecture.md  02_real_world_problem.md  03_market_data_flow.md  03_object_pooling.md  04_benchmarking.md  04_building_pipeline.md  05_performance_problem.md  06_object_pool.md  07_benchmark.md  08_scaling.md  09_future_architecture.md  glossary.md
docs/adr/: 0001-use-asyncio.md  0002-object-pool.md
examples/: run_naive_example.py  run_optimized_example.py
market_pipeline/: __init__.py  consumer.py  generator.py  logging_config.py  metrics.py  models.py  object_pool.py  pipeline_naive.py  pipeline_optimized.py
screenshots/: README.md
tests/: test_integration.py  test_models.py  test_object_pool.py  test_pipeline_naive.py  test_pipeline_optimized.py  test_stress.py
